feat(event-menu): add bookmark functionality and share option to event menu

--- a/src/app/components/event/event-menu/event-menu.component.html
+++ b/src/app/components/event/event-menu/event-menu.component.html
@@ -25,6 +25,23 @@
     <mat-icon>share</mat-icon>
     Share Event
   </button>
+
+  <button mat-menu-item (click)="onBookmarkClick($event)">
+    <mat-icon [matTooltip]="bookmark.getBookmarkTooltip(event().id)" matTooltipPosition="below">
+      {{ bookmark.getBookmarkIcon(event().id) }}
+    </mat-icon>
+    @if (bookmark.isBookmarked(event().id)) {
+      Remove Bookmark
+    } @else {
+      Add Bookmark
+    }
+  </button>
+
+
+  <button mat-menu-item (click)="layout.shareEvent(event())">
+    <mat-icon>share</mat-icon>
+    Share Event
+  </button>
   <button mat-menu-item (click)="layout.publishEvent(event())">
     <mat-icon>publish</mat-icon>
     Publish Event
