--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -37,13 +37,21 @@
                 </button> -->
         }
 
-        <button class="hide-tiny" mat-stroked-button (click)="layoutService.openSendMessage(currentPubkey())">
-          <mat-icon>message</mat-icon> Message
+        <!-- <button class="hide-tiny" mat-stroked-button (click)="layoutService.openSendMessage(currentPubkey())">
+          <mat-icon>message</mat-icon>
+          <span class="hide-small"> Message</span>
+        </button> -->
+
+        <button class="hide-tiny" [matTooltip]="'Send private message'" mat-icon-button (click)="layoutService.openSendMessage(currentPubkey())">
+          <mat-icon>message</mat-icon>
         </button>
 
         <!-- Zap Button -->
+        @if (hasLightningAddress()) {
         <app-zap-button [recipientPubkey]="currentPubkey()" class="hide-tiny">
         </app-zap-button>
+        }
+
         }
 
         <button mat-icon-button class="profile-menu-button" [matMenuTriggerFor]="profileMenu">
@@ -164,6 +172,13 @@
           <mat-icon>{{ isFavorite() ? 'heart_minus' : 'heart_plus' }}</mat-icon>
           <span>{{ isFavorite() ? 'Unfavorite' : 'Favorite' }}</span>
         </button>
+
+        @if (hasLightningAddress()) {
+        <button mat-menu-item (click)="zapUser()">
+          <mat-icon>bolt</mat-icon>
+          <span>Zap</span>
+        </button>
+        }
         }
 
         @if (isOwnProfile()) {
