fix(profile-header): format button element for better readability

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -42,7 +42,8 @@
           <span class="hide-small"> Message</span>
         </button> -->
 
-        <button class="hide-tiny" [matTooltip]="'Send private message'" mat-icon-button (click)="layoutService.openSendMessage(currentPubkey())">
+        <button class="hide-tiny" [matTooltip]="'Send private message'" mat-icon-button
+          (click)="layoutService.openSendMessage(currentPubkey())">
           <mat-icon>message</mat-icon>
         </button>
 
