Add support for loading skeleton on the feeds component

--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -299,6 +299,16 @@
                 </div>
               </div>
               }
+
+              <!-- Loading indicator -->
+              <div class="skeleton-loading-indicator">
+                <div class="loading-dots">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <span class="loading-text">Loading content...</span>
+              </div>
             </div>
             } @else {
             <div class="column-items">
